[FIX] ajustando responsividade no header e overflow-x hidden

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -9,6 +9,7 @@
     margin: 2rem auto;
     position: relative;
     z-index: 1;
+    
 }
 
 .logo{
@@ -48,7 +49,7 @@
 
 
 
-@media (max-width: 640px){
+@media (max-width: 840px){
 
     .menu{
         display: none;
@@ -126,7 +127,7 @@
 
 }
 
-@media (min-width: 641px){
+@media (min-width: 841px){
     .button_mobile{
         display: none;
     }
@@ -160,75 +161,4 @@
     }
 }
 
-
-/* 
-  ##Device = Desktops
-  ##Screen = 1281px to higher resolution desktops
-*/
-
-@media (min-width: 1281px) {
   
-    /* CSS */
-    
-  }
-  
-  /* 
-    ##Device = Laptops, Desktops
-    ##Screen = B/w 1025px to 1280px
-  */
-  
-  @media (min-width: 1025px) and (max-width: 1280px) {
-    
-    /* CSS */
-    
-  }
-  
-  /* 
-    ##Device = Tablets, Ipads (portrait)
-    ##Screen = B/w 768px to 1024px
-  */
-  
-  @media (max-width: 800px) {
-    
-    /* CSS */
-    .logo{
-        margin-top: 1rem;
-        padding: 2rem;
-        width: 18rem;
-        height: auto;
-    }
-    
-  }
-  
-  /* 
-    ##Device = Tablets, Ipads (landscape)
-    ##Screen = B/w 768px to 1024px
-  */
-  
-  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-    
-    /* CSS */
-    
-  }
-  
-  /* 
-    ##Device = Low Resolution Tablets, Mobiles (Landscape)
-    ##Screen = B/w 481px to 767px
-  */
-  
-  @media (min-width: 481px) and (max-width: 767px) {
-    
-    /* CSS */
-    
-  }
-  
-  /* 
-    ##Device = Most of the Smartphones Mobiles (Portrait)
-    ##Screen = B/w 320px to 479px
-  */
-  
-  @media (min-width: 320px) and (max-width: 480px) {
-    
-    /* CSS */
-    
-  }
