--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -3,6 +3,8 @@
   overflow-y: auto;
   overscroll-behavior-y: contain;
   scroll-snap-type: y mandatory;
+  overflow-x: hidden;
+    overflow-y: hidden;
   height: 100vh;
   width: 100%;
   -ms-overflow-style: none;
